--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -3,6 +3,7 @@
     "home_link": "Accueil",
     "about_link": "A propos",
     "counter_link": "Compteur",
+    "guestbook_link": "Livre d'or",
     "portfolio_link": "Portfolio",
     "sign_in_link": "Se connecter",
     "sign_up_link": "S'inscrire"
@@ -26,6 +27,18 @@
     "presentation": "Le compteur est stocké dans la base de données et incrémenté par la valeur que vous fournissez.",
     "label_increment": "Incrémenter de",
     "button_increment": "Incrémenter"
+  },
+  "Guestbook": {
+    "meta_title": "Livre d'or",
+    "meta_description": "Un exemple de fonctionnement CRUD",
+    "database_powered_by": "Base de données propulsée par",
+    "loading_guestbook": "Chargement du livre d'or...",
+    "error_reporting_powered_by": "Rapport d'erreur propulsé par"
+  },
+  "GuestbookForm": {
+    "username": "Nom d'utilisateur",
+    "body": "Message",
+    "save": "Sauvegarder"
   },
   "CurrentCount": {
     "count": "Nombre : {count}"
