--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -8,13 +8,13 @@
     "sign_up_link": "Sign up"
   },
   "BaseTemplate": {
-    "description": "Starter code for your Nextjs Boilerplate with Tailwind CSS",
+    "description": "SSR? ISR? CSR? I just wanted my div to render, man!",
     "made_with": "Made with <author></author>."
   },
   "Index": {
-    "meta_title": "Next.js Boilerplate Presentation",
-    "meta_description": "Next js Boilerplate is the perfect starter code for your project. Build your React application with the Next.js framework.",
-    "sponsors_title": "Sponsors"
+    "meta_title": "Home",
+    "meta_description": "Home description",
+    "home_paragraph": "Welcome to Home page!"
   },
   "Counter": {
     "meta_title": "Counter",
@@ -33,8 +33,7 @@
   "About": {
     "meta_title": "About",
     "meta_description": "About page description",
-    "about_paragraph": "Welcome to our About page! We are a team of passionate individuals dedicated to creating amazing software.",
-    "translation_powered_by": "Translation powered by"
+    "about_paragraph": "Welcome to About page!"
   },
   "Portfolio": {
     "meta_title": "Portfolio",
